# eRPC

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  LICENSE  Makefile.manual  NOTES.md  README.md  clean.sh  do.sh  example.cc  multi.sh  run-tests.sh  small-rpc-tput.sh
apps/: apps_common.h  hdr_histogram_wrapper.h
apps/congestion/: config  congestion.cc  congestion.h  incast_impl.h  profile_incast.h  profile_victim.h  regular_impl.h
apps/consensus/: README.md  appendentries.h  callbacks.h  client.h  config  consensus.cc  consensus.h  kv_store.json  request_appendentries.h  request_vote.h  requestvote.h  time_entry.h
apps/dpdk/: dpdk.cc  eth_helpers.h
apps/dpdk_mp_example/: client.cc  server.cc
apps/hello/: Makefile  client.cc  common.h  server.cc
apps/large_rpc_tput/: config  large_rpc_tput.cc  large_rpc_tput.h  profile_incast.h  profile_random.h  profile_timely_small.h  profile_victim.h
apps/latency/: config  latency.cc
apps/log/: README.md  config  log.cc  log.h
apps/masstree_analytics/: config  masstree_analytics.cc  masstree_analytics.h  mt_index_api.cc  mt_index_api.h
apps/mica_test/: mica_test.cc  mica_test.json
apps/persistent_kv/: config  persistent_kv.cc  pmica.h
apps/pmem_bw/: config  pmem_bw.cc  pmem_bw.h  setup_dpdk.sh
apps/raft/: raft.h
apps/rc_swarm/: README.md  main.h  rc_swarm.cc  sweep.h
apps/rdma_write_incast/: run-machine.sh  run-servers.sh
apps/server_rate/: config  server_rate.cc
apps/small_rpc_tput/: config  small_rpc_tput.cc
apps/smr/: README.md  appendentries.h  callbacks.h  client.h  config  kv_store.json  log_callbacks.h  pmem-init.sh  pmem_log.h  raft-install.sh  raft-make.sh  requestvote.h  server.h  smr.cc  smr.h  time_entry.h
doc/: session_management.md
docs/: conf.py  index.rst
drivers/libmlx4-41mlnx1/: clean.sh  libmlx4.spec.in  update_driver.sh
drivers/libmlx5-41mlnx1/: .gitignore  .ycm_extra_conf.py  Makefile.am  configure.ac  update-driver.sh
drivers/libmlx5-41mlnx1/debian/: changelog
drivers/libmlx5-41mlnx1/src/: cq.c  doorbell.h  ec.c  list.h  mlx5.c  mlx5.h  mlx5dv.h  modded_drivers.h  qp.c  srq.c  verbs.c  wqe.h
drivers/orig/libmlx4-41mlnx1/: .gitreview  Makefile.am
drivers/orig/libmlx4-41mlnx1/src/: mlx4.c  mmio.h  qp.c  wqe.h
hello_world/: Makefile  client.cc  common.h  server.cc
scripts/: autorun.sh  autorun_app_file  autorun_parse.sh  autorun_process_file  bind-dpdk-all.sh  check-nics.sh  clean.sh  do.sh  example_autorun_app_file  fawn_autorun_process_file  fetch-err.sh  gen_autorun_node_file.sh  gen_autorun_process_file.sh  gen_autorun_server_file.sh  hugepages.sh  ibnet_out  ibnet_proc.sh  kill-all.sh  linux_autorun_process_file  packages.sh  proc-err.sh  proc-out.sh  run-all.sh  run-dpdk-tests.sh  run-remote.sh  run-tests-dpdk.sh  run-tests.sh  timely_sweep.sh  utils.sh  win_autorun_process_file  xl170-topo.sh
scripts/archive/: README.md
scripts/azure/: launch.sh  teardown.sh
scripts/centos/: packages.sh
scripts/cloudlab/: README.md
scripts/dpdk_setup/: .gitignore  clemson_x710.sh  cloudlab.sh  ifname.c  ifname.cc
scripts/emulab/: README  utah_xl170.py
scripts/ethernet_setup/: README.md  cloudlab_xl170.sh
scripts/fedora/: erpc.xml  firewall.sh  mosh.xml  packages.sh
scripts/firewalld/: README.md  erpc.xml  memcached.xml  mosh_firewall.sh
scripts/raw_eth_setup/: README.md  cerberus.sh  wimpy.sh
scripts/roce_setup/: cerberus_roce_setup.sh  cloudlab_xl170.sh  pluto0_roce_setup.sh  pluto1_roce_setup.sh  wimpy_roce_setup.sh
scripts/setup_dpdk/: Makefile  apt_c6220.sh  azure.sh  cloudlab.sh  ifname.cc
scripts/topo/: README  xl170-topo.sh
src/: HugeAlloc.h  Rpc.h  Session.h  Transport.h  TransportTypes.h  bg_thread.h  buffer.h  clang-tidy.sh  common.h  config.h  config.h.in  heartbeat.h  heartbeat_mgr.h  huge_alloc.h  msg_buffer.h  nexus.cc  nexus.h  ops.h  optlevel.h  pinger.h  pkthdr.h  req_handle.h  rpc.cc  rpc.h  rpc_constants.h  rpc_types.h  session.cc  session.h  session_mgmt_types.h  sm_types.h  small_rpc_optlevel.h  sslot.h  timely.h  transport.cc  transport.h  transport_types.h  tweakme.h
src/TransportImpl/: InfiniBandTransport.h
src/cc/: timely.h  timely_sweep_params.h  timing_wheel.h  wheel_record.h
src/nexus_impl/: nexus.cc  nexus_bg.cc  nexus_bg_thread.cc  nexus_sm_thread.cc
src/rpc_impl/: rpc.cc  rpc_bg_queues.cc  rpc_client_kick.cc  rpc_connect_handlers.cc  rpc_cr.cc  rpc_datapath.cc  rpc_disconnect_handlers.cc  rpc_enqueue_request.cc  rpc_enqueue_response.cc  rpc_ev_loop.cc  rpc_fault_inject.cc  rpc_flush_handlers.cc  rpc_flush_mgmt_handlers.cc  rpc_ioat.cc  rpc_kick.cc  rpc_pkt_loss.cc  rpc_queues.cc  rpc_req.cc  rpc_reset_handler.cc  rpc_reset_handlers.cc  rpc_resp.cc  rpc_rfr.cc  rpc_rx.cc  rpc_send_cr.cc  rpc_send_request.cc  rpc_send_response.cc  rpc_send_rfr.cc  rpc_session_mgmt.cc  rpc_session_mgmt_handlers.cc  rpc_sm_api.cc  rpc_sm_flush_handlers.cc  rpc_sm_helpers.cc  rpc_sm_retry.cc  rpc_sslot.cc  rpc_tx.cc
src/timely_impl/: timely.cc
src/transport_impl/: eth_common.h  ib_transport.cc  ib_transport.h  ib_transport_datapath.cc  inet_hdrs.h  infiniband_transport.cc  infiniband_transport.h  raw_transport.h  raw_transport_datapath.cc  transport.cc  verbs_common.h
src/util/: autorun_helpers.h  barrier.h  buffer.cc  buffer.h  externs.cc  externs.h  fixed_queue.h  fixed_vector.h  gettid.h  hdr_histogram_wrapper.h  huge_alloc.cc  huge_alloc.h  latency.h  logger.h  math_utils.h  mempool.h  misc.h  mt_list.h  mt_queue.h  numautils.cc  numautils.h  pmem.h  rand.cc  rand.h  rte_memcpy_mod.h  test_printf.h  timer.h  timing_wheel.h  tls_registry.cc  tls_registry.h  tsc.h  udp_client.h  (+3 more)
tests/: test_api_restrictions.cc  test_basics.h  test_bg_restrictions.cc  test_build.cc  test_connect_session.cc  test_create_session.cc  test_create_session_args.cc  test_destroy_session.cc  test_fixed_vector.cc  test_huge_alloc.cc  test_large_msg.cc  test_packet_loss.cc  test_printf.h  test_rand.cc  test_req_in_cont.cc  test_req_in_cont_func.cc  test_req_in_req_func.cc  test_small_msg.cc  test_small_msg_2.cc
(+234 files in other folders)
